--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -15,7 +15,7 @@
         <!-- Customize your theme here. -->
         <item name="windowNoTitle">false</item>
         <item name="android:background">@color/white</item>
-        <item name="android:windowFullscreen">false</item>
+        <item name="android:windowFullscreen">true</item>
     </style>
 
 </resources>
