--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="colorPrimary">#0891CF</color>
-    <color name="colorPrimaryDark">#0E577D</color>
+    <color name="colorPrimaryDark">#3CBEA3</color>
     <color name="colorAccent">#0E577D</color>
     <color name="white">#ffffff</color>
     <color name="black">#000000</color>
