--- a/app/src/main/res/layout/activity_login_signup.xml
+++ b/app/src/main/res/layout/activity_login_signup.xml
@@ -4,53 +4,64 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/bg_color"
+    android:background="@drawable/main_gradient_bg"
     android:padding="@dimen/dim_10"
     tools:context="com.localfriend.LoginSignupActivity">
 
-<LinearLayout
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_alignParentBottom="true"
-    android:orientation="vertical"
-    android:layout_marginBottom="@dimen/dim_50">
-    <TextView
+    <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="@drawable/rounded_corner_blue"
-        android:text="Hello there, I'm your Local Friend"
-        android:textSize="@dimen/dim_16"
-        android:padding="@dimen/dim_10"
-        android:textColor="@color/white"/>
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/dim_15"
-        android:background="@drawable/rounded_corner_blue"
-        android:text="I'm here to help you with anything , anytime"
-        android:textSize="@dimen/dim_16"
-        android:padding="@dimen/dim_10"
-        android:textColor="@color/white"/>
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@drawable/rounded_corner_white"
-        android:text="Let's get started"
-        android:textSize="@dimen/dim_16"
-        android:gravity="center"
-        android:layout_marginTop="@dimen/dim_25"
-        android:padding="@dimen/dim_10"
-        android:textColor="@color/blue_text"/>
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="right"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="@dimen/dim_30"
         android:background="@null"
-        android:text="Already have an account ? "
-        android:textColor="@color/white"
-        android:id="@+id/tv_already_account"
-        android:textSize="@dimen/dim_18"
-        android:layout_marginTop="@dimen/dim_25"
-        />
+        android:src="@drawable/home_icon" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_marginBottom="@dimen/dim_50"
+        android:orientation="vertical">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@drawable/rounded_corner_blue"
+            android:padding="@dimen/dim_10"
+            android:text="Hello there, I'm your Local Friend"
+            android:textColor="@color/white"
+            android:textSize="@dimen/dim_16" />
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/dim_15"
+            android:background="@drawable/rounded_corner_blue"
+            android:padding="@dimen/dim_10"
+            android:text="I'm here to help you with anything , anytime"
+            android:textColor="@color/white"
+            android:textSize="@dimen/dim_16" />
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/dim_25"
+            android:background="@drawable/rounded_corner_white"
+            android:gravity="center"
+            android:padding="@dimen/dim_10"
+            android:text="Let's get started"
+            android:textColor="@color/blue_text"
+            android:textSize="@dimen/dim_16" />
+
+        <TextView
+            android:id="@+id/tv_already_account"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="right"
+            android:layout_marginTop="@dimen/dim_25"
+            android:background="@null"
+            android:text="Already have an account ? "
+            android:textColor="@color/white"
+            android:textSize="@dimen/dim_18" />
     </LinearLayout>
 </RelativeLayout>
