--- a/app/src/main/res/layout/activity_signin_one.xml
+++ b/app/src/main/res/layout/activity_signin_one.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/bg_color"
+    android:background="@drawable/main_gradient_bg"
     android:paddingTop="@dimen/dim_10"
     tools:context="com.localfriend.SigninActivityOne">
 
@@ -18,9 +18,10 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
-            android:background="@null"
+            android:background="?attr/selectableItemBackgroundBorderless"
+            android:padding="5dp"
             android:id="@+id/img_btn_back"
-            android:src="@drawable/ic_action_name" />
+            android:src="@drawable/ic_back" />
 
         <TextView
             android:layout_width="wrap_content"
