--- a/app/src/main/res/layout/activity_signin_two.xml
+++ b/app/src/main/res/layout/activity_signin_two.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/bg_color"
+    android:background="@drawable/main_gradient_bg"
     android:paddingTop="@dimen/dim_10"
     tools:context="com.localfriend.SigninActivityTwo">
 
@@ -18,9 +18,11 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
-            android:background="@null"
             android:id="@+id/img_btn_back"
-            android:src="@drawable/ic_action_name" />
+            android:background="?attr/selectableItemBackgroundBorderless"
+            android:padding="5dp"
+
+             />
 
         <TextView
             android:layout_width="wrap_content"
@@ -67,7 +69,7 @@
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
         android:background="@null"
-        android:src="@drawable/track_order_pt_sans" />
+        android:src="@drawable/walkthroughss" />
 
     <RelativeLayout
         android:layout_width="match_parent"
