--- a/app/src/main/res/layout/menu_left_drawer.xml
+++ b/app/src/main/res/layout/menu_left_drawer.xml
@@ -2,47 +2,47 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@android:color/white"
+    android:background="@drawable/main_gradient_bg"
     android:orientation="vertical">
 
-    <Space
+  <!--  <Space
         android:layout_width="wrap_content"
-        android:layout_height="90dp" />
+        android:layout_height="90dp" />-->
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:paddingLeft="24dp"
-        android:paddingRight="24dp"
-        android:paddingStart="24dp"
-        android:text="Blance"
-        android:textSize="12sp" />
+
 
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:baselineAligned="false"
-        android:orientation="horizontal"
+        android:orientation="vertical"
         android:paddingLeft="24dp"
         android:paddingRight="24dp">
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="6dp"
-            android:text="currency" />
+        <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
+            android:id="@+id/img_profile"
+            android:layout_width="@dimen/dim_75"
+            android:layout_height="@dimen/dim_75"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="@dimen/dim_15"
+            android:src="@drawable/markzuckerberg"
+            app:civ_border_color="#FF000000"
+            app:civ_border_width="1dp" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="amount"
-            android:textSize="34sp" />
+            android:text="Kuldeep Singh"
+            android:layout_gravity="center_horizontal"
+            android:textSize="@dimen/dim_18"
+            android:layout_marginTop="@dimen/dim_10"
+            android:textColor="@color/white"/>
 
     </LinearLayout>
 
     <Space
         android:layout_width="wrap_content"
-        android:layout_height="56dp" />
+        android:layout_height="50dp" />
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/list"
