--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,12 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/drawer_layout"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@color/white">
-
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools"
@@ -17,7 +9,7 @@
         android:orientation="vertical"
         tools:context="com.localfriend.MainActivity">
 
-        <RelativeLayout
+<!--        <RelativeLayout
             android:id="@+id/rl_top"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -43,13 +35,39 @@
                 android:textColor="@color/white"
                 android:textSize="@dimen/dim_20" />
 
-        </RelativeLayout>
+        </RelativeLayout>-->
+        <android.support.design.widget.AppBarLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
 
+            <android.support.v7.widget.Toolbar
+                android:id="@+id/toolbar"
+                android:layout_width="match_parent"
+                android:layout_height="?actionBarSize"
+                android:background="@drawable/main_gradient_bg">
+
+            </android.support.v7.widget.Toolbar>
+        </android.support.design.widget.AppBarLayout>
+    <FrameLayout
+        android:id="@+id/container"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1" />
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent">
+            <FrameLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="@null"
+                android:layout_above="@+id/bottom_nav_layout"
+                android:id="@+id/service_container">
 
-            <ScrollView
+
+
+
+            </FrameLayout>
+            <!--<ScrollView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
 
@@ -151,12 +169,13 @@
                             android:src="@drawable/bavregesss" />
                     </android.support.v7.widget.CardView>
                 </LinearLayout>
-            </ScrollView>
+            </ScrollView>-->
 
             <LinearLayout
                 android:id="@+id/bottom_nav_layout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginBottom="@dimen/dim_50"
                 android:layout_alignParentBottom="true">
 
                 <include layout="@layout/bottom"></include>
@@ -168,12 +187,4 @@
     </LinearLayout>
 
 
-    <fragment
-        android:id="@+id/fragment_navigation_drawer"
-        android:name="com.localfriend.fragments.FragmentDrawer"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_gravity="start"
-        app:layout="@layout/fragment_navigation_drawer"
-        tools:layout="@layout/fragment_navigation_drawer" />
-</android.support.v4.widget.DrawerLayout>
+
