Dheeraj Second Commit-05/10/2017

--- a/app/src/main/res/drawable-xxhdpi/curvy_gradient_bg.xml
+++ b/app/src/main/res/drawable-xxhdpi/curvy_gradient_bg.xml
@@ -8,5 +8,6 @@
         android:centerX="1"
         android:type="linear"
         />
-
+    <corners
+        android:radius="@dimen/dim_25"/>
 </shape>
